# r-gate

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
docs/: ER-DIAGRAM.md  PROJECT-PLAN.md
docs/ADR/: 0001-layered-architecture.md
services/backend/: Cargo.toml
services/backend/src/: main.rs
services/backend/src/infrastructure/: config.rs  mod.rs
services/backend/src/infrastructure/db/: connection.rs
services/backend/src/presentation/: mod.rs
services/backend/src/presentation/handlers/: health_handler.rs
services/backend/src/presentation/routers/: health_routes.rs
