[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
envy = "0.4.2"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "postgres-array", "with-uuid", "with-time", "with-json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = {  version = "1.47.0", features = ["full"] }

